# Fully_deploable_RAG

./: -F  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yaml
data/: AI_agent.txt
multi_doc_chat/config/: config.yaml
multi_doc_chat/exception/: __init__.py
multi_doc_chat/logger/: __init__.py
multi_doc_chat/model/: models.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/data_ingestion/: data_ingestion.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/test/: document_chat_golden_set.json
multi_doc_chat/utils/: document_ops.py  file_io.py  model_loader.py
notebooks/: RAG.ipynb
templates/: index.html
test/: conftest.py
test/integration/: test_chat_route.py  test_uplad_route.py
test/unit/: test_data_ingestion.py  test_retrieval.py
